--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:hint="Name"
         android:inputType="textEmailAddress"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="414dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/email_unregistered_user" />
 
     <EditText
         android:id="@+id/email_unregistered_user"
@@ -24,7 +25,8 @@
         android:hint="E-mail"
         android:inputType="textEmailAddress"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="371dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/password_unregistered_user" />
 
     <EditText
         android:id="@+id/password_unregistered_user"
@@ -34,7 +36,8 @@
         android:hint="Password"
         android:inputType="textPassword"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="328dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/username_unregistered_user" />
 
     <TextView
         android:id="@+id/register"
@@ -43,7 +46,8 @@
         android:text="Register"
         android:textSize="30sp"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="249dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/login_existing_user" />
 
     <EditText
         android:id="@+id/username_unregistered_user"
@@ -54,7 +58,8 @@
         android:hint="Username"
         android:inputType="textPersonName"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="285dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/register" />
 
     <EditText
         android:id="@+id/username_registered_user"
@@ -65,7 +70,8 @@
         android:hint="Username"
         android:inputType="textPersonName"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="120dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/user_login" />
 
     <EditText
         android:id="@+id/password_registered_user"
@@ -75,24 +81,27 @@
         android:hint="Password"
         android:inputType="textPassword"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="163dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/username_registered_user" />
 
     <TextView
         android:id="@+id/user_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="74dp"
+        android:layout_height="36dp"
         android:text="Login"
         android:textSize="30sp"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="84dp" />
+        tools:layout_editor_absoluteY="16dp" />
 
     <Button
         android:id="@+id/login_existing_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:onClick="loginUser"
         android:text="Login"
-        tools:layout_editor_absoluteX="209dp"
-        tools:layout_editor_absoluteY="206dp" />
+        app:layout_constraintTop_toBottomOf="@+id/password_registered_user"
+        tools:layout_editor_absoluteX="212dp" />
 
     <Button
         android:id="@+id/register_unregistered_user"
@@ -100,6 +109,7 @@
         android:layout_height="wrap_content"
         android:onClick="registerUser"
         android:text="Register"
-        tools:layout_editor_absoluteX="209dp"
-        tools:layout_editor_absoluteY="457dp" />
+        tools:layout_editor_absoluteX="212dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/name_unregistered_user" />
 </android.support.constraint.ConstraintLayout>
