--- a/app/src/main/res/layout/content_landing_activity.xml
+++ b/app/src/main/res/layout/content_landing_activity.xml
@@ -8,4 +8,10 @@
     tools:context="com.glutenfreesoftware.shareable_shopping.Landing_Activity"
     tools:showIn="@layout/app_bar_landing_activity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="368dp"
+        android:layout_height="439dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
 </android.support.constraint.ConstraintLayout>
