--- a/app/src/main/res/menu/landing_activity.xml
+++ b/app/src/main/res/menu/landing_activity.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/update"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="update"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/search"
+        android:orderInCategory="100"
+        android:title="search"
+        app:showAsAction="ifRoom" />
 </menu>
