--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,61 +7,6 @@
     tools:context="com.glutenfreesoftware.shareable_shopping.MainActivity">
 
     <EditText
-        android:id="@+id/name_unregistered_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Name"
-        android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="85dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/email_unregistered_user" />
-
-    <EditText
-        android:id="@+id/email_unregistered_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="E-mail"
-        android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="85dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/password_unregistered_user" />
-
-    <EditText
-        android:id="@+id/password_unregistered_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        tools:layout_editor_absoluteX="85dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/username_unregistered_user" />
-
-    <TextView
-        android:id="@+id/register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        android:textSize="30sp"
-        tools:layout_editor_absoluteX="85dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/login_existing_user" />
-
-    <EditText
-        android:id="@+id/username_unregistered_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="Username"
-        android:ems="10"
-        android:hint="Username"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="85dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/register" />
-
-    <EditText
         android:id="@+id/username_registered_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -104,12 +49,13 @@
         tools:layout_editor_absoluteX="212dp" />
 
     <Button
-        android:id="@+id/register_unregistered_user"
+        android:id="@+id/register_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="registerUser"
-        android:text="Register"
-        tools:layout_editor_absoluteX="212dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/name_unregistered_user" />
+        android:onClick="openRegistrationActivity"
+        android:text="Register"
+        app:layout_constraintTop_toBottomOf="@+id/login_existing_user"
+        tools:layout_editor_absoluteX="212dp" />
+
 </android.support.constraint.ConstraintLayout>
