--- a/app/src/main/res/menu/activity_landing_drawer.xml
+++ b/app/src/main/res/menu/activity_landing_drawer.xml
@@ -3,17 +3,29 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/account"
-            android:title="Account" />
+            android:id="@+id/home"
+            android:title="Home" />
         <item
-            android:id="@+id/friends"
-            android:title="Friends" />
+            android:id="@+id/rooms"
+            android:title="Rooms" />
+        <item
+            android:id="@+id/shopping_lists"
+            android:title="Shopping Lists" />
+        <item
+            android:id="@+id/stored_lists"
+            android:title="Stored lists" />
         <item
             android:id="@+id/shared_with_me"
             android:title="Shared with me" />
         <item
+            android:id="@+id/gps"
+            android:title="GPS" />
+        <item
             android:id="@+id/settings"
             android:title="Settings" />
+        <item
+            android:id="@+id/logout"
+            android:title="Logout" />
 
     </group>
 
