--- a/app/src/main/res/layout/layout_rooms.xml
+++ b/app/src/main/res/layout/layout_rooms.xml
@@ -10,5 +10,9 @@
         android:id="@+id/rooms_recyclerview"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+    </android.support.v7.widget.RecyclerView>
+
+
 </LinearLayout>
