--- a/app/src/main/res/layout/layout_rooms.xml
+++ b/app/src/main/res/layout/layout_rooms.xml
@@ -6,6 +6,12 @@
     android:orientation="vertical">
 
 
+    <Button
+        android:id="@+id/add_room"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add room" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rooms_recyclerview"
         android:scrollbars="vertical"
