--- a/app/src/main/res/layout/layout_shopping_lists.xml
+++ b/app/src/main/res/layout/layout_shopping_lists.xml
@@ -6,31 +6,44 @@
     android:orientation="vertical">
 
 
-
-    <Button
-        android:id="@+id/share_room"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Share room" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/delete_room"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Delete room" />
+        <Button
+            android:id="@+id/delete_room"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_weight="1"
+            android:text="Delete room" />
 
-    <Button
-        android:id="@+id/add_list"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Add list" />
+        <Button
+            android:id="@+id/add_list"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Add list" />
 
+        <Button
+            android:id="@+id/share_room"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Share room" />
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rooms_recyclerview"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" >
+
+    </android.support.v7.widget.RecyclerView>
+
+
 </LinearLayout>
