--- a/app/src/main/res/layout/model2.xml
+++ b/app/src/main/res/layout/model2.xml
@@ -13,7 +13,7 @@
         android:layout_marginRight="6dip"
         android:adjustViewBounds="false"
         android:contentDescription="TODO"
-        android:src="@drawable/press_folder" />
+        android:src="@drawable/list_icon" />
 
     <TextView
         android:id="@+id/secondLine"
