--- a/app/src/main/res/layout/model.xml
+++ b/app/src/main/res/layout/model.xml
@@ -11,8 +11,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="6dip"
-        android:contentDescription="TODO"
-        android:src="@mipmap/ic_launcher" />
+        android:contentDescription=""
+        android:src="@drawable/recycler_logo" />
 
     <TextView
         android:id="@+id/secondLine"
